--- a/views/index.html
+++ b/views/index.html
@@ -16,8 +16,8 @@
 	
 	<!--css-->
 <!--
-	<link rel="stylesheet" href="http://static.SOKCHObeach.co.kr/css/common.css">
-	<link rel="stylesheet" href="http://static.SOKCHObeach.co.kr/css/init.css">
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/common.css">
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/init.css">
 -->
 	<link rel="stylesheet" href="../static/css/common.css">
 	<link rel="stylesheet" href="../static/css/init.css">
@@ -25,7 +25,7 @@
 	<!--js-->
 	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-<!--	<script src="http://static.SOKCHObeach.co.kr/js/init.js"></script>-->
+<!--	<script src="http://static.sokchobeach.co.kr/js/init.js"></script>-->
 	<script src="../static/js/init.js"></script>
 	
 	<!--[if lt IE 9]>
@@ -352,7 +352,7 @@
 				<div class="container">
 					<div class="area cf">
 						<div class="way-map">
-							<a href="">
+							<a href="http://map.daum.net/?urlX=851339&urlY=1305803&itemId=22099937">
 								<img src="../img/map.jpg" alt="오시는 길">
 							</a>
 						</div>
