--- a/views/about/index.html
+++ b/views/about/index.html
@@ -17,16 +17,16 @@
 	<!--css-->
 <!--
 	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/common.css">
-	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/about/init.css">
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/tourist/init.css">
 -->
 	<link rel="stylesheet" href="../../static/css/common.css">
-	<link rel="stylesheet" href="../../static/css/about/init.css">
+	<link rel="stylesheet" href="../../static/css/tourist/init.css">
 	
 	<!--js-->
 	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-<!--	<script src="http://static.sokchobeach.co.kr/js/about/init.js"></script>-->
-	<script src="../../static/js/about/init.js"></script>
+<!--	<script src="http://static.sokchobeach.co.kr/js/tourist/init.js"></script>-->
+	<script src="../../static/js/tourist/init.js"></script>
 	
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -40,15 +40,15 @@
 		<header class="header">
 			<div class="wrap">
 				<div class="area container">
-					<h1 class="logo"><a href=""><img src="../../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 삼포비치</span></a></h1>
+					<h1 class="logo"><a href="../index.html"><img src="../../img/common/logo_2.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 속초비치</span></a></h1>
 					<nav class="gnb">
 						<ul class="menu cf">
-							<li class="item-1"><a href="">속초해변 소개</a></li>
-							<li class="item-2"><a href="">관광정보</a></li>
-							<li class="item-3"><a href="">속초8경</a></li>
-							<li class="item-4"><a href="">오시는 길</a></li>
-							<li class="item-5"><a href="">추억게시판</a></li>
-							<li class="item-6"><a href="">공지사항</a></li>
+							<li class="item-1"><a href="../about/">속초해변 소개</a></li>
+							<li class="item-2"><a href="../tourist/">관광정보</a></li>
+							<li class="item-3"><a href="../view/">속초8경</a></li>
+							<li class="item-4"><a href="../waycome/">오시는 길</a></li>
+							<li class="item-5"><a href="../board/memory_list.html">추억게시판</a></li>
+							<li class="item-6"><a href="../board/index.html">공지사항</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -57,348 +57,56 @@
 		
 		<div class="contents">
 		
-			<section class="wrap main">
-				<div class="slide-container">
-					<div class="slide slide-1">
-						<div class="mainTxt container">
-							<p class="p-1">상상만으로 설레게 하는 내 마음 속 바다 !</p>
-							<h2>아름다운 강원도 <span class="f-bd">속초해변</span></h2>
-							<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
-							<p class="p-3">
-								가슴벅찬 일출, 시원한 파도와 함께하는 추억<br>
-								대한민국이 자랑하는 그랑블루, 속초해수욕장입니다.
-							</p>
-						</div>
-					</div>
-					<div class="slide slide-2">
-						<div class="mainTxt container">
-							<p class="p-1">열려있는 은빛 백사장과 향긋한 바다향기</p>
-							<h2><span class="f-bd">속초해변</span>의 푸름을 만나다 !</h2>
-							<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
-							<p class="p-3">
-								푸르게 빛나는 삼포 바다의 수평선<br>
-								사계절, 바다내음이 가득 물든 풍광들이 넘처납니다.
-							</p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="weather">
-					<div class="area">
-						<div class="inner">
-							<span class="s-1">2018.07.02 (월)</span>
-							<span class="s-2">속초의 오늘 <span class="t-1">▷</span> 비</span>
-							<span class="s-3"><span class="big">21</span><span class="c">℃</span></span>
-						</div>
-						<img src="http://img.sampobeach.co.kr/weather/rain.png" alt="날씨">
-					</div>
+			<section class="wrap subVisual">
+				<div class="mainTxt container">
+					<p class="p-1">동해에서 만나는 다이나믹 비치</p>
+					<h2>내가 상상하던 바다, <span class="f-bd">속초해변</span> 소개</h2>
+					<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
 				</div>
 			</section>
-			<section class="wrap cmStyle view">
+			<section class="wrap cmStyle about">
 				<div class="container">
-					<h2 class="tit">
-						<span class="sokcho thColor"><span class="f-bd">SOKCHO</span> BEACH</span>
-						<span class="big">나를 감동시키는 <span class="f-bd thColor">속초의 8가지 경치</span></span>
-					</h2>
-					<div class="area">
-						<ol class="list cf">
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/waycome/view_01.png" alt="속초8경"></figure>
-								<dl>
-									<dt>
-										<h4><span class="num">I</span> 속초등대전망대</h4>
-									</dt>
-									<dd>
-										영금정 속초등대전망대로 많이 알려져<br>
-										있는 곳으로 전망대에서 바라보는 바다와<br>
-										설악산의 풍경이 절경이다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/waycome/view_02.png" alt="속초8경"></figure>
-								<dl>
-									<dt>
-										<h4><span class="num">II</span> 범바위</h4>
-									</dt>
-									<dd>
-										영랑호 중간지점 서남쪽에 잠겨있는 큰 <br>
-										바위로서 위엄이 당당하며 마치 범<br>
-										형상으로 생겼다고 하여 범바위로 불리운다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/waycome/view_03.png" alt="속초8경"></figure>
-								<dl>
-									<dt>
-										<h4><span class="num">III</span> 청대산</h4>
-									</dt>
-									<dd>
-										정상에서 보는 속초시가지와 동해일출뿐만<br> 
-										아니라 대청봉, 달마봉, 울산바위 등 설악을 <br>
-										가까이에서 조망할 수 있는 천연전망대이다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/waycome/view_04.png" alt="속초8경"></figure>
-								<dl>
-									<dt>
-										<h4><span class="num">IV</span> 청초호 호수공원</h4>
-									</dt>
-									<dd>
-										호수 위에 지어진 청초정은 시원한 동해<br>
-										바다와 설악산을 감상할 수 있는 명소로,<br>
-										해상공원에는 청룡과 황룡 조형물이 있다.
-									</dd>
-								</dl>
-							</li>
-						</ol>
-						<ol class="list cf">
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/waycome/view_05.png" alt="속초8경"></figure>
-								<dl>
-									<dt>
-										<h4><span class="num">V</span> 조도</h4>
-									</dt>
-									<dd>
-										새들이 많이 찾는 섬이라하여 붙여진 <br>
-										조도와 백사장이 어우러져 주변 경관의 <br>
-										조화로움을 더해주고 일출의 아름다움이 전해진다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/waycome/view_06.png" alt="속초8경"></figure>
-								<dl>
-									<dt>
-										<h4><span class="num">VI</span> 대포 외옹치</h4>
-									</dt>
-									<dd>
-										설악산 기슭의 청정 바닷가에 자리잡은 <br>
-										대포는 광어, 넙치, 방어 등의 집산지로 <br>
-										유명하며 파도의 경관이 아름다운 곳이다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/waycome/view_07.png" alt="속초8경"></figure>
-								<dl>
-									<dt>
-										<h4><span class="num">VII</span> 설악 해맞이공원</h4>
-									</dt>
-									<dd>
-										관광객의 손모양을 담아 도자기로 구워내 <br>
-										해맞이광장 등 다양한 테마를 가진 <br>
-										조각상과 설악산 조형물과 분수대가 조성되어 있다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/waycome/view_08.png" alt="속초8경"></figure>
-								<dl>
-									<dt>
-										<h4><span class="num">VIII</span> 학무정</h4>
-									</dt>
-									<dd>
-										조선 말 매곡처사 오윤환 선생이 1934년에 <br>
-										건립하였다. 정자모양이 육각으로 되어 <br>
-										있어 흔히 육모정이라 부른다
-									</dd>
-								</dl>
-							</li>
-						</ol>
-					</div>
-				</div>
-			</section>
-			<section class="wrap cmStyle tourist">
-				<div class="container">
-					<h2 class="tit">
-						<span class="sokcho"><span class="f-bd">SOKCHO</span> BEACH</span>
-						<span class="big">더 즐겁게 <span class="f-bd thColor">주변관광지</span></span>
-					</h2>
-					<div class="area cf">
-						<h3 class="h3-tit"><span class="f-bd">국립공원</span> 관광지 <span class="sokcho"><span class="f-bd">SOKCHO</span> BEACH</span></h3>
-						<ol class="list cf">
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/tourist/nature_01.jpg" alt="국립공원관광지"></figure>
-								<dl>
-									<dt>
-										<h4>설악산국립공원</h4>
-										강원도 속초시 설악산로 1091
-									</dt>
-									<dd>
-										수많은 동식물들이 함께 살고 있는 
-										자연생태계의 보고이며, 수려한 자연자원을 
-										가지고 있는 공원으로 계곡,폭포,바위등 
-										대표적인 경관들이 어우러져있는 곳입니다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/tourist/nature_02.jpg" alt="국립공원관광지"></figure>
-								<dl>
-									<dt>
-										<h4>권금성</h4>
-										강원도 속초시 설악산로 1091
-									</dt>
-									<dd>
-										신흥사 입구에서 남으로 하늘높이 우뚝 솟은 
-										웅장한 봉으로 설악의 선경이라고 불러도 
-										과언이 아닐정도의 경관을 자랑하고 있는 
-										곳입니다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/tourist/nature_03.jpg" alt="국립공원관광지"></figure>
-								<dl>
-									<dt>
-										<h4>신흥사</h4>
-										강원도 속초시 설악산로 1137
-									</dt>
-									<dd>
-										향성사지 3층 석탑, 신흥사 극략보전, 보제루, 
-										목조아미타삼존불좌상, 부도, 경판등의 
-										문화재가 있는 곳입니다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/tourist/nature_04.jpg" alt="국립공원관광지"></figure>
-								<dl>
-									<dt>
-										<h4>울산바위</h4>
-										강원도 속초시 설악산로 1091
-									</dt>
-									<dd>
-										남한에서 가장 멋진 바위로 꼽혔으며, 
-										정상까지 오를 수 있는 계단이 만들어져 있고, 
-										정상에 오르면 대청봉도 보이고 외설악 
-										전경도 눈에 들어 오는 곳입니다.
-									</dd>
-								</dl>
-							</li> 
-						</ol>
-					</div>
-					<div class="area cf area-2">
-						<h3 class="h3-tit"><span class="f-bd">조형물</span> 관광지 <span class="sokcho"><span class="f-bd">SOKCHO</span> BEACH</span></h3>
-						<ol class="list cf">
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/tourist/sculp_01.jpg" alt="조형물관광지"></figure>
-								<dl>
-									<dt>
-										<h4>엑스포타워</h4>
-										강원도 속초시 엑스포로 72
-									</dt>
-									<dd>
-										74m 높이의 전망대로 자연,환경, 관광을 
-										모티브로 발전하는 강원도의 미래를 
-										상징하였으며, 산과 호수가 어울리는 
-										자연공원 속의 하이테크 전망 타워 입니다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/tourist/sculp_02.jpg" alt="조형물관광지"></figure>
-								<dl>
-									<dt>
-										<h4>인어연인상</h4>
-										강원 속초시 동해대로 3664
-									</dt>
-									<dd>
-										연인의 이루어지지 못한 영원한 사랑을 위해 
-										마을 사람들이 세운 동상으로 이곳은 사랑이 
-										이루어지는 바닷가 마을로 널리 소개되며 
-										연인들이 자주 찾는 명소입니다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/tourist/sculp_03.jpg" alt="조형물관광지"></figure>
-								<dl>
-									<dt>
-										<h4>산호상</h4>
-										강원도 속초시 해오름로 190
-									</dt>
-									<dd>
-										산호초의 환상적 꿈과 물고기의 역동적 희망, 
-										그리고 그 꿈과 희망을 귓가에 전해주는 
-										소리를 형상화한 조형물입니다.
-									</dd>
-								</dl>
-							</li>
-							<li class="link-tour">
-								<figure class="tour-img"><img src="../../img/tourist/sculp_04.jpg" alt="조형물관광지"></figure>
-								<dl>
-									<dt>
-										<h4>영금정</h4>
-										강원도 속초시 동명항길 35
-									</dt>
-									<dd>
-										바닷가에 흩어져 있는 암반 지역을 말하는 
-										것으로, 아기자기한 해변 경관을 감상할 수 
-										있으며, 방파제와는 또 다른 바다를 느낄 수 
-										있으며, 일출 감상 명소이기도 합니다. 
-									</dd>
-								</dl>
-							</li>
-						</ol>
-					</div>
-				</div>
-			</section>
-			<section class="wrap cmStyle waycome">
-				<div class="container">
-					<div class="area cf">
-						<div class="way-map">
-							<a href="http://map.daum.net/?urlX=851339&urlY=1305803&itemId=22099937">
-								<img src="../../img/map.jpg" alt="오시는 길">
-							</a>
-						</div>
-						<div class="way-info">
-							<h2 class="tit">
-								<span class="sokcho-2"><span class="f-bd">SOKCHO</span> BEACH</span>
-								<span class="big"><span class="f-bd">속초해변</span> 오시는 길</span>
-							</h2>
-							<p class="p-1">자가 차량 이용시</p>
-							<dl>
-								<dt></dt>
-								<dd>- 네비게이션 주소 또는 속초해변 입력</dd>
-							</dl>
-							<p class="p-1">대중교통 이용시</p>
-							<dl>
-								<dt>- 양양공항 이용시</dt>
-								<dd class="dot">
-									<span class="dot">:</span>
-									공항에서 하왕도리 남양6번 버스 승차 후 새마을 정류장 하차, <br>
-									남양(6)(하왕도리) 승차 후, 남문2리 정류장에서 하차<br>
-									속초(9)(남문2리) 승차 후, 새마을 정류장에서 하차<br>
-									속초해수욕장까지 약 700미터 도보로 이동
-								</dd>
-							</dl>
-							<dl>
-								<dt>- 속초시외버스터미널 하차시 </dt>
-								<dd class="dot">
-									<span class="dot">:</span>
-									속초시외버스터미널에서 정류장에서 7-1번, 9-1번, 9번 버스 탑승 후<br>
-									고속버스터미널 하차, 동쪽으로 440미터 도보로 이동
-								</dd>
-							</dl>
-							<dl>
-								<dt>- 속초고속버스터미널 하차시</dt>
-								<dd class="dot">
-									<span class="dot">:</span>
-									속초 고속버스터미널 하차 후 동쪽으로 440미터 도보로 이동
-								</dd>
-							</dl>
-						</div>
+					<div class="area area-1">
+						<h3 class="h3-tit">
+							<span class="row-1">동해가 품은 아름다운 해변 ! <span class="sokcho"><span class="f-bd">SOKCHO</span> BEACH</span></span>
+							<span class="row-2"><span class="f-bd">속초해수욕장</span>으로 오시면 만사가 여유로워집니다.</span>
+						</h3>
+						<figure class="full"><img src="../../img/about/beach_big.jpg" alt="속초해변"></figure>
+						<p class="showing">
+							속초해수욕장은 속초고속터미널에서 동쪽으로 500m 거리에 있는 해변으로 1976년 7월 1일 처음 개장했습니다. <br>
+							백사장의 길이는 청호동, 조양동, 대포동까지 총 연장 2km로 이 중 개장되는 곳은 1km, 폭 75m로 29,752m²(약 9,000평)에 달하며 모래의 질이 양호할 <br>
+							뿐만 아니라 수질이 청결하고 송림이 양호하여 속초시민과 외지인들이 즐겨찾는 곳으로 공원, 꽃길, 산책로가 조성되어 있습니다. <br>
+							또한, 주변의 주요 관광자원인 설악산, 척산온천, 청초호, 영랑호와 더불어 속초시를 종합관광지로 부상시키는데 커다란 몫을 담당하고 있고, 그 중요성과<br>
+							필요성이 한층 더 돋보이고 있습니다. 
+						</p>
+						<p class="showing">
+							동해안 강원도 지역에 위치한 해변은 대략 십여 개가 넘지만 속초시에는 유독 단 한 군데의 해수욕장만이 자리하고 있습니다. 속초시의 유일무이한 <br>
+							해수욕장이기에 집중적인 관리로 다른 어느 해수욕장보다도 질서가 잘 잡혀있어 깔끔한 인상을 줍니다.
+						</p>
+						<p class="showing">
+							속초 시내와 가깝고 조양동 고속터미널에서 500m 인근이라 휴가철뿐만 아니라 비수기나 동절기에도 찾아오는 방문객들이 많습니다. 특히, 설악산과 가까워 <br>
+							내설악 쪽에서 대청봉을 거쳐 설악동으로 내려오는 등산객들이 반드시 거쳐 가는 코스이기도 합니다. 인근에 위치한 대포항 또한, 값싸고 싱싱한 활어회로 <br>
+							유명하여 이곳 일대는 사시사철 관광객들로 인파를 이룹니다. 교통이 편리하기 때문에 꼭 해수욕이 아니더라도 언제든 잠시 들러 바다 구경하고 돌아가기에 좋습니다.
+						</p>
+						<figure class="half">
+							<img src="../../img/about/beach_sm_1.jpg" alt="속초해변"><img src="../../img/about/beach_sm_2.jpg" alt="속초해변">
+						</figure>
+						<p class="showing">
+							연중 상시 개방된 속초해변 중 속초8경 중 하나인 조도의 일출이 명소인 곳입니다.<br>
+							백사장에는 목재 산책로가 조성되어 있고, 백사장 뒷편에 송림이 잘 가꾸어져 있으며, 화장실, 샤워장 등 부대시설과 국민여가캠핑장, 주차장, 야영장 등이 <br>
+							충분히 확보되어 있으며 하계 휴가객을 위한 속초해수욕장을 매년 7월부터 8월까지 운영하고 있습니다.
+						</p>
+						<p class="showing">
+							모든 것이 새롭게 만사가 여유러워지는 속초해변으로 놀러오세요.
+						</p>
+						<figure class="half">
+							<img src="../../img/about/beach_sm_3.jpg" alt="속초해변축제"><img src="../../img/about/beach_sm_4.jpg" alt="속초해변축제">
+						</figure>
 					</div>
 				</div>
 			</section>
 			
-		</div>
-		
+		</div>		
 		
 		<footer class="footer">
 			<div class="wrap container">
