--- a/views/board/memory_write.html
+++ b/views/board/memory_write.html
@@ -6,46 +6,52 @@
 <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
-	<title>삼포해수욕장</title>
+	<title>속초해수욕장</title>
 	
 	<!--공통 폰트 및 css-->
 	<link rel="stylesheet" href="http://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
 	<link rel="stylesheet" href="http://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/reset.css">
+	<link rel="stylesheet" href="../../static/css/reset.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.css">
 	
 	<!--css-->
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/common.css">
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/board/init.css">
 <!--
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/common.css">
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/board/init.css">
+-->
 	<link rel="stylesheet" href="../../static/css/common.css">
 	<link rel="stylesheet" href="../../static/css/board/init.css">
--->
 	
 	<!--js-->
 	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="http://static.sampobeach.co.kr/js/board/init.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+<!--	<script src="http://static.sokchobeach.co.kr/js/board/init.js"></script>-->
+	<script src="../../static/js/board/init.js"></script>
 	
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<![endif]-->
+	
 </head>
 <body>
 
 	<div class="wrapper">
 		
 		<header class="header">
-			<div class="wrap container">
-				<h1 class="logo"><a href=""><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장 로고"> <span class="skip">삼포해수욕장 삼포비치</span></a></h1>
-				<nav class="gnb">
-					<ul class="menu cf">
-						<li class="item-1"><a href="">삼포해변 소개</a></li>
-						<li class="item-2"><a href="">축제 이벤트</a></li>
-						<li class="item-3"><a href="">오시는 길</a></li>
-						<li class="item-4"><a href="">주변관광</a></li>
-						<li class="item-5"><a href="">추억게시판</a></li>
-						<li class="item-6"><a href="">공지사항</a></li>
-					</ul>
-				</nav>
+			<div class="wrap">
+				<div class="area container">
+					<h1 class="logo"><a href=""><img src="../../img/common/logo_2.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 속초비치</span></a></h1>
+					<nav class="gnb">
+						<ul class="menu cf">
+							<li class="item-1"><a href="">속초해변 소개</a></li>
+							<li class="item-2"><a href="">관광정보</a></li>
+							<li class="item-3"><a href="">속초8경</a></li>
+							<li class="item-4"><a href="">오시는 길</a></li>
+							<li class="item-5"><a href="">추억게시판</a></li>
+							<li class="item-6"><a href="">공지사항</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</header>
 		
@@ -53,14 +59,14 @@
 			<section class="wrap subVisual board-memory">
 				<div class="mainTxt container">
 					<p class="p-1">행복했던 어제, 즐거웠던 기억을 남겨보세요</p>
-					<h2><span class="f-bd">삼포해변</span> 추억게시판</h2>
-					<p class="p-2"><span class="f-bdr">SAMPO</span> BEACH</p>
+					<h2><span class="f-bd">속초해변</span> 추억게시판</h2>
+					<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
 				</div>
 			</section>
 			<section class="wrap cmStyle board board-memory">
 				<div class="container">
 					<h2 class="tit">
-						<span class="sampo"><span class="f-bd">SAMPO</span> BEACH</span>
+						<span class="sokcho"><span class="f-bd">SOKCHO</span> BEACH</span>
 						<span class="f-bd">추억게시판 글쓰기</span>
 					</h2>
 					<div class="area area-1">
@@ -163,22 +169,16 @@
 		
 		<footer class="footer">
 			<div class="wrap container">
-				<figure class="logo"><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장로고"></figure>
+				<figure class="logo"><img src="../../img/common/logo.png" alt="속초해수욕장로고"></figure>
 				<address>
-					본 사이트는 삼포해변을 사랑하는 마을 주민회에서 운영하고 있습니다.<br>
-					오시는 길 : 강원도 고성군 죽왕면 삼포해변길 (죽왕면) / 삼포리 1-1번지 삼포해변<br>
-					<small>copyright @ sampobeach.co.kr All right reserved</small>
+					아름다운 속초해변 !  영롱한 바다는 물론이며 주변의 관광지인 설악산, 척산온천, 청초호, 영랑호와 더불어 <br>
+					속초시에 유일한 해수욕장으로 전국적인 사랑을 한 몸에 받고 있습니다.<br>
+					<p class="p-2">
+						본 사이트는 속초해수욕장을 사랑하는 주민자치회가 자체 운영합니다.<br>
+						대한민국 강원도 속초시 조양동 속초해수욕장
+					</p>
+					<small>copyright @ sokchobeach.co.kr All right reserved</small>
 				</address>
-				<nav class="gnb">
-					<ul class="menu cf">
-						<li class="item-1"><a href="">삼포해변 소개</a></li>
-						<li class="item-2"><a href="">축제 이벤트</a></li>
-						<li class="item-3"><a href="">오시는 길</a></li>
-						<li class="item-4"><a href="">주변관광</a></li>
-						<li class="item-5"><a href="">추억게시판</a></li>
-						<li class="item-6"><a href="">공지사항</a></li>
-					</ul>
-				</nav>
 			</div>
 		</footer>
 		
