--- a/views/index.html
+++ b/views/index.html
@@ -43,12 +43,12 @@
 					<h1 class="logo"><a href=""><img src="../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 삼포비치</span></a></h1>
 					<nav class="gnb">
 						<ul class="menu cf">
-							<li class="item-1"><a href="">속초해변 소개</a></li>
-							<li class="item-2"><a href="">관광정보</a></li>
-							<li class="item-3"><a href="">속초8경</a></li>
-							<li class="item-4"><a href="">오시는 길</a></li>
-							<li class="item-5"><a href="">추억게시판</a></li>
-							<li class="item-6"><a href="">공지사항</a></li>
+							<li class="item-1"><a href="about/">속초해변 소개</a></li>
+							<li class="item-2"><a href="tourist/">관광정보</a></li>
+							<li class="item-3"><a href="view/">속초8경</a></li>
+							<li class="item-4"><a href="waycome/">오시는 길</a></li>
+							<li class="item-5"><a href="board/memory_list.html">추억게시판</a></li>
+							<li class="item-6"><a href="board/">공지사항</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -103,7 +103,7 @@
 					<div class="area">
 						<ol class="list cf">
 							<li class="link-tour">
-								<figure class="tour-img"><img src="../img/waycome/view_01.png" alt="속초8경"></figure>
+								<figure class="tour-img"><img src="../img/view/view_01.png" alt="속초8경"></figure>
 								<dl>
 									<dt>
 										<h4><span class="num">I</span> 속초등대전망대</h4>
@@ -116,7 +116,7 @@
 								</dl>
 							</li>
 							<li class="link-tour">
-								<figure class="tour-img"><img src="../img/waycome/view_02.png" alt="속초8경"></figure>
+								<figure class="tour-img"><img src="../img/view/view_02.png" alt="속초8경"></figure>
 								<dl>
 									<dt>
 										<h4><span class="num">II</span> 범바위</h4>
@@ -129,7 +129,7 @@
 								</dl>
 							</li>
 							<li class="link-tour">
-								<figure class="tour-img"><img src="../img/waycome/view_03.png" alt="속초8경"></figure>
+								<figure class="tour-img"><img src="../img/view/view_03.png" alt="속초8경"></figure>
 								<dl>
 									<dt>
 										<h4><span class="num">III</span> 청대산</h4>
@@ -142,7 +142,7 @@
 								</dl>
 							</li>
 							<li class="link-tour">
-								<figure class="tour-img"><img src="../img/waycome/view_04.png" alt="속초8경"></figure>
+								<figure class="tour-img"><img src="../img/view/view_04.png" alt="속초8경"></figure>
 								<dl>
 									<dt>
 										<h4><span class="num">IV</span> 청초호 호수공원</h4>
@@ -157,7 +157,7 @@
 						</ol>
 						<ol class="list cf">
 							<li class="link-tour">
-								<figure class="tour-img"><img src="../img/waycome/view_05.png" alt="속초8경"></figure>
+								<figure class="tour-img"><img src="../img/view/view_05.png" alt="속초8경"></figure>
 								<dl>
 									<dt>
 										<h4><span class="num">V</span> 조도</h4>
@@ -170,7 +170,7 @@
 								</dl>
 							</li>
 							<li class="link-tour">
-								<figure class="tour-img"><img src="../img/waycome/view_06.png" alt="속초8경"></figure>
+								<figure class="tour-img"><img src="../img/view/view_06.png" alt="속초8경"></figure>
 								<dl>
 									<dt>
 										<h4><span class="num">VI</span> 대포 외옹치</h4>
@@ -183,7 +183,7 @@
 								</dl>
 							</li>
 							<li class="link-tour">
-								<figure class="tour-img"><img src="../img/waycome/view_07.png" alt="속초8경"></figure>
+								<figure class="tour-img"><img src="../img/view/view_07.png" alt="속초8경"></figure>
 								<dl>
 									<dt>
 										<h4><span class="num">VII</span> 설악 해맞이공원</h4>
@@ -196,7 +196,7 @@
 								</dl>
 							</li>
 							<li class="link-tour">
-								<figure class="tour-img"><img src="../img/waycome/view_08.png" alt="속초8경"></figure>
+								<figure class="tour-img"><img src="../img/view/view_08.png" alt="속초8경"></figure>
 								<dl>
 									<dt>
 										<h4><span class="num">VIII</span> 학무정</h4>
