--- a/views/waycome/index.html
+++ b/views/waycome/index.html
@@ -6,19 +6,31 @@
 <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
-	<title>삼포해수욕장</title>
+	<title>속초해수욕장</title>
 	
 	<!--공통 폰트 및 css-->
 	<link rel="stylesheet" href="http://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
 	<link rel="stylesheet" href="http://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/reset.css">
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/common.css">
+	<link rel="stylesheet" href="../../static/css/reset.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.css">
 	
 	<!--css-->
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/waycome/init.css">
+<!--
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/common.css">
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/waycome/init.css">
+-->
+	<link rel="stylesheet" href="../../static/css/common.css">
+	<link rel="stylesheet" href="../../static/css/waycome/init.css">
 	
 	<!--js-->
 	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+<!--	<script src="http://static.sokchobeach.co.kr/js/waycome/init.js"></script>-->
+	<script src="../../static/js/waycome/init.js"></script>
+	
+	<!--[if lt IE 9]>
+		<script type="text/javascript" src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<![endif]-->
 	
 </head>
 <body>
@@ -26,17 +38,20 @@
 	<div class="wrapper">
 		
 		<header class="header">
-			<div class="wrap container">
-				<h1 class="logo"><a href=""><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장 로고"> <span class="skip">삼포해수욕장 삼포비치</span></a></h1>
-				<nav class="gnb">
-					<ul class="menu cf">
-						<li class="item-1"><a href="">삼포해변 소개</a></li>
-						<li class="item-2"><a href="">축제 이벤트</a></li>
-						<li class="item-3"><a href="">오시는 길</a></li>
-						<li class="item-4"><a href="">주변관광</a></li>
-						<li class="item-5"><a href="">공지사항</a></li>
-					</ul>
-				</nav>
+			<div class="wrap">
+				<div class="area container">
+					<h1 class="logo"><a href=""><img src="../../img/common/logo_2.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 속초비치</span></a></h1>
+					<nav class="gnb">
+						<ul class="menu cf">
+							<li class="item-1"><a href="">속초해변 소개</a></li>
+							<li class="item-2"><a href="">관광정보</a></li>
+							<li class="item-3"><a href="">속초8경</a></li>
+							<li class="item-4"><a href="">오시는 길</a></li>
+							<li class="item-5"><a href="">추억게시판</a></li>
+							<li class="item-6"><a href="">공지사항</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</header>
 		
@@ -44,9 +59,9 @@
 		
 			<section class="wrap subVisual">
 				<div class="mainTxt container">
-					<p class="p-1">동해안의 숨어있는 비경</p>
-					<h2><span class="f-bd">삼포해변</span> 오시는 길</h2>
-					<p class="p-2"><span class="f-bdr">SAMPO</span> BEACH</p>
+					<p class="p-1">설레는 내 마음 속 바다</p>
+					<h2><span class="f-bd">속초해변</span> 오시는 길</h2>
+					<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
 				</div>
 			</section>
 			<section class="wrap cmStyle waycome">
@@ -57,29 +72,41 @@
 							<dl>
 								<dt class="skip"></dt>
 								<dd>
-									<p class="dot">차량 네비게이션에서 <span class="c-blue f-bd">삼포해변</span>을 입력</p>
-									<p class="dot"><span class="c-blue f-bd">죽왕면 삼포리 1-1</span> 주소를 입력</p>
+									<p class="dot">차량 네비게이션에서 <span class="c-blue f-bd">속초해변</span>을 입력</p>
+									<p class="dot"><span class="c-blue f-bd">속초시 조양동 속초해수욕장</span> 주소를 입력</p>
 								</dd>
 							</dl>
 							<p class="p-1">대중교통 이용시</p>
 							<dl>
-								<dt>간성시외버스터미널 하차시</dt>
-								<dd><p class="dot">신안리 정류장에서 1번, 1-1번 버스 승차 후<br> 삼포리정류장에서 하차</p></dd>
+								<dt>양양공항 이용시</dt>
+								<dd>
+									<p class="dot">
+										공항에서 하왕도리 남양6번 버스 승차 후 새마을 정류장 하차,<br>
+										남양(6)(하왕도리) 승차 후, 남문2리 정류장에서 하차<br>
+										속초(9)(남문2리) 승차 후, 새마을 정류장에서 하차<br>
+										속초해수욕장까지 약 700미터 도보 이동
+									</p>
+								</dd>
 							</dl>
 							<dl>
 								<dt>속초시외버스터미널 하차시 </dt>
-								<dd><p class="dot">한국전력 정류장에서 1번, 1-1번 버스 승차 후<br> 삼포리정류장에서 하차</p></dd>
+								<dd>
+									<p class="dot">
+										속초시외버스터미널에서 정류장에서 7-1번, 9-1번, 9번 버스 탑승 후<br>
+										고속버스터미널 하차, 동지고으로 440미터 도보 이동
+									</p>
+								</dd>
 							</dl>
 							<dl>
 								<dt>속초고속버스터미널 하차시</dt>
-								<dd><p class="dot">속초 고속버스터미널 정류장 1번,<br> 1-1번 버스 승차 후 삼포리정류장에서 하차</p></dd>
+								<dd><p class="dot">속초 고속버스터미널 하차 후 동쪽으로 440미터 도보 이동</p></dd>
 							</dl>
 							<p class="row-btn">
 								<a href=""><img src="http://img.sampobeach.co.kr/waycome/btn_n.png" alt="네이버지도보기"></a><a href=""><img src="http://img.sampobeach.co.kr/waycome/btn_d.png" alt="다음지도보기"></a>
 							</p>
 						</div>
 						<div class="way-map">
-							<div style="font:normal normal 400 12px/normal dotum, sans-serif; width:700px; height:676px; color:#333; position:relative"><div style="height: 643px;"><a target="_blank" href="http://map.daum.net/?urlX=835408.0&amp;urlY=1339931.0&amp;name=%EA%B0%95%EC%9B%90%20%EA%B3%A0%EC%84%B1%EA%B5%B0%20%EC%A3%BD%EC%99%95%EB%A9%B4%20%EC%82%BC%ED%8F%AC%EB%A6%AC%201-1&amp;map_type=TYPE_MAP&amp;from=roughmap"><img class="map" src="//t1.daumcdn.net/roughmap/imgmap/ec4b4fa45c4fe39c933f49cc575668d830cd892299d6a1b909f5f8499ed951ea" width="698px" height="641px" style="border:1px solid #ccc;"></a></div><div><span style="border-left:1px solid #dbdbdb;border-right:1px solid #dbdbdb;border-bottom:1px solid #dbdbdb;box-sizing:border-box;box-sizing:border-box;background-color:#f9f9f9;position:absolute;left:0px;top:643px;width:700px;height:33px"></span><span style="position:absolute;left:12px;top:650px"><img src="//t1.daumcdn.net/localimg/localimages/07/2013/map/test/ico_street.gif"></span><a href="http://map.daum.net/?from=roughmap&amp;eName=%EA%B0%95%EC%9B%90%20%EA%B3%A0%EC%84%B1%EA%B5%B0%20%EC%A3%BD%EC%99%95%EB%A9%B4%20%EC%82%BC%ED%8F%AC%EB%A6%AC%201-1&amp;eX=835408.0&amp;eY=1339931.0" target="_blank" style="text-decoration: none;color: #333;font:normal normal 400 12px gulim, sans-serif;line-height:normal;position:absolute;left:28px;top:654px">길찾기</a></div></div>
+							<a href="http://map.daum.net/?urlX=851339&urlY=1305803&itemId=22099937"><img src="../../img/waycome/map.jpg" alt="속초해수욕장지도"></a>
 						</div>
 					</div>
 				</div>
@@ -90,22 +117,16 @@
 		
 		<footer class="footer">
 			<div class="wrap container">
-				<figure class="logo"><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장로고"></figure>
+				<figure class="logo"><img src="../../img/common/logo.png" alt="속초해수욕장로고"></figure>
 				<address>
-					본 사이트는 삼포해변을 사랑하는 마을 주민회에서 운영하고 있습니다.<br>
-					오시는 길 : 강원도 고성군 죽왕면 삼포해변길 (죽왕면) / 삼포리 1-1번지 삼포해변<br>
-					이메일 : help@sampobeach.co.kr<br>
-					<small>copyright @ sampobeach.co.kr All right reserved</small>
+					아름다운 속초해변 !  영롱한 바다는 물론이며 주변의 관광지인 설악산, 척산온천, 청초호, 영랑호와 더불어 <br>
+					속초시에 유일한 해수욕장으로 전국적인 사랑을 한 몸에 받고 있습니다.<br>
+					<p class="p-2">
+						본 사이트는 속초해수욕장을 사랑하는 주민자치회가 자체 운영합니다.<br>
+						대한민국 강원도 속초시 조양동 속초해수욕장
+					</p>
+					<small>copyright @ sokchobeach.co.kr All right reserved</small>
 				</address>
-				<nav class="gnb">
-					<ul class="menu cf">
-						<li class="item-1"><a href="">삼포해변 소개</a></li>
-						<li class="item-2"><a href="">축제 이벤트</a></li>
-						<li class="item-3"><a href="">오시는 길</a></li>
-						<li class="item-4"><a href="">주변관광</a></li>
-						<li class="item-5"><a href="">공지사항</a></li>
-					</ul>
-				</nav>
 			</div>
 		</footer>
 		
