--- a/static/css/common.css
+++ b/static/css/common.css
@@ -37,21 +37,21 @@ label {cursor: pointer;}
 .area {position: relative;}
 
 /*공통 서브비쥬얼*/
-.contents .subVisual {padding-top: 140px; box-sizing: border-box; color: #fff; height: 318px; background: #eee url(http://img.sampobeach.co.kr/event/subVisual.jpg) no-repeat center;}
-.contents .subVisual .mainTxt {text-align: right;}
+.contents .subVisual {padding-top: 74px; box-sizing: border-box; color: #fff; height: 243px; background: #eee url(http://img.sampobeach.co.kr/event/subVisual.jpg) no-repeat center;}
+.contents .subVisual .mainTxt {text-align: center;}
 .contents .subVisual .mainTxt > * {text-shadow: 3px 3px 2px rgba(0,0,0, .25); letter-spacing: -0.7px;}
 .contents .subVisual .mainTxt .p-1 {font-size: 22px;font-weight: 700;}
 .contents .subVisual .mainTxt h2 {font-size: 54px; margin-top: 5px; letter-spacing: -2px; line-height: 1.2;}
-.contents .subVisual .mainTxt .p-2 {font-size: 16px; margin-top: 5px;}
+.contents .subVisual .mainTxt .p-2 {font-size: 16px; margin-top: 5px; text-transform: uppercase;}
 
 /*해더영역*/
-.header {position: relative;}
 .header,
-.header .wrap {width: 100%; height: 106px;}
+.header .wrap {width: 100%; height: 74px;}
+.header {position: relative; background: #000;}
 .header .wrap {position: fixed; top: 0; left: 0; width: 100%; background: rgba(0,0,0,0.4); z-index: 1;}
-.header .wrap .area {height: 100%; padding-top: 42px; box-sizing: border-box;}
+.header .wrap .area {height: 100%; padding-top: 27px; box-sizing: border-box;}
 
-.header .wrap .logo {position: absolute; left: 15px; top: 50%; margin-top: -31px;}
+.header .wrap .logo {position: absolute; left: 15px; top: 50%; margin-top: -23px;}
 
 .wrapper .wrap .gnb {position: relative; float: right;}
 .wrapper .wrap .menu > li {position: relative; float: left;} 
